whiskyapp/whisky-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whiskyapp
  labels:
    app: whiskyapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whiskyapp
  template:
    metadata:
      labels:
        app: whiskyapp
    spec:
      containers:
      - name: whiskyapp
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whiskyapp-svc
spec:
  selector:
    app: whiskyapp
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: whiskyapp-vs
spec:
  hosts:
  - "whiskyapp.local"
  gateways:
  - istio-system/default-gateway  # Assuming you have a gateway configured in istio-system namespace
  http:
  - route:
    - destination:
        host: whiskyapp-svc
        port:
          number: 80
